--- a/src/app/formular/formular.component.html
+++ b/src/app/formular/formular.component.html
@@ -1,10 +1,6 @@
 <form (submit)="addZeile()">
-  Feld01
-  <input type="text" [(ngModel)]="pFeld01" name="Feld01">
-  <br>
-  Feld02
-  <input type="text" [(ngModel)]="pFeld02" name="Feld02">
-
+  Feld01  <input type="text" [(ngModel)]="pFeld01" name="Feld01">
+  Feld02  <input type="text" [(ngModel)]="pFeld02" name="Feld02">
   <button type="submit"> hinzufügen</button>
 </form>
 
