--- a/src/app/formular/formular.component.html
+++ b/src/app/formular/formular.component.html
@@ -5,8 +5,8 @@
 </form>
 
 <ul>
-  <li *ngFor="let Zeile of ZEILEN; let i = index">
-    <span>{{Zeile.feld01}}</span> <span>{{Zeile.feld02}}</span> <button (click)="delZeile(i)">löschen</button>
+  <li *ngFor="let zeile of zeilen; let i = index">
+    <span>{{zeile.feld01}}</span> <span>{{zeile.feld02}}</span> <button (click)="delZeile(i)">löschen</button>
   </li>
 </ul>
 
